--- a/main.html
+++ b/main.html
@@ -3,14 +3,79 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+     <title>My Name</title>
+     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+     <img src="images/download.png">
+     <header><h1>Vignesh</h1></header>
+     <a href="https://www.linkedin.com/in/vigneshkalyan/">Linkedin</a>
+     <section id="skills">
+          <h1 class="section-heading mb75px ">
+              <span>
+                  <i class="fas fa-chalkboard-teacher"></i>
+              </span>
+              <span> SKILLS </span>
+          </h1>
 
-</body>
+          <div class="skills-display">
 
-</html>
+              <div class="skill-progress">
+                  <div class="fifty-percent mb-blue">
+                      <div class="skill-name">
+                          <span> C++ </span>
+                      </div>
+                  </div>
+              </div>
+              <div class="skill-progress">
+                  <div class="eighty-five-percent mb-orange">
+                      <div class="skill-name">
+                          <span> HTML </span>
+                      </div>
+                  </div>
+              </div>
+              <div class="skill-progress">
+                  <div class="eighty-percent mb-light-purple">
+                      <div class="skill-name">
+                          <span> CSS </span>
+                      </div>
+                  </div>
+              </div>
+              <div class="skill-progress">
+                  <div class="fifty-percent mb-teal">
+                      <div class="skill-name">
+                          <span> Javascript </span>
+                      </div>
+                  </div>
+              </div>
+              <div class="skill-progress">
+                  <div class="fifty-percent mb-blue">
+                      <div class="skill-name">
+                          <span> NodeJs </span>
+                      </div>
+                  </div>
+              </div>
+              <div class="skill-progress">
+                  <div class="eighty-percent mb-light-purple">
+                      <div class="skill-name">
+                          <span> MongoDB </span>
+                      </div>
+                  </div>
+              </div>
+
+          </div>
+
+      </section>
+
+      <section id="projects">
+         
+          <ul>
+               <li>Project 1</li>
+               <li>Project 1</li>
+               <li>Project 1</li>
+               <li>Project 1</li>
+          </ul>
+      </section>
+   </body>
+   </html>
